--- a/requirements.txt
+++ b/requirements.txt
@@ -1,188 +1,64 @@
-apturl==0.5.2
-arrow==0.15.6
-arviz==0.8.3
-attrs==19.3.0
-Automat==20.2.0
-backcall==0.1.0
-bleach==3.1.1
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-cftime==1.1.3
+argon2-cffi==20.1.0
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.1.5
+certifi==2020.6.20
+cffi==1.14.2
 chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==7.1.2
 cmapPy==4.0.1
-command-not-found==0.3
-constantly==15.1.0
-cryptography==2.8
-cssselect==1.1.0
-cupshelpers==1.0
-cvxopt==1.2.5
-cycler==0.10.0
-dbus-python==1.2.16
 decorator==4.4.2
-defer==1.0.6
 defusedxml==0.6.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-docutils==0.16
 entrypoints==0.3
-future==0.18.2
 h5py==2.10.0
-html5lib==1.0.1
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==17.5.0
-ipykernel==5.3.0
-ipython==7.13.0
+idna==2.10
+ipykernel==5.3.4
+ipython==7.18.1
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi==0.15.2
+jedi==0.17.2
 Jinja2==2.11.2
-joblib==0.15.1
-json5==0.9.5
+joblib==0.16.0
 jsonschema==3.2.0
 jupyter==1.0.0
-jupyter-client==6.1.3
-jupyter-console==6.1.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
+jupyter-client==6.1.7
+jupyter-console==6.2.0
 jupyter-core==4.6.3
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.6
-jupyter-nbextensions-configurator==0.4.1
-jupyterlab==2.1.4
-jupyterlab-server==1.1.5
-keyring==18.0.1
-kiwisolver==1.2.0
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-line-profiler==3.0.2
-llvmlite==0.32.1
-louis==3.12.0
-lxml==4.5.1
-macaroonbakery==1.3.1
 MarkupSafe==1.1.1
-matplotlib==3.2.1
 mistune==0.8.4
-more-itertools==4.2.0
-mpmath==1.1.0
 nbconvert==5.6.1
-nbformat==5.0.6
-netCDF4==1.5.3
-netifaces==0.10.4
-networkx==2.4
-nltk==3.5
-notebook==6.0.3
-numba==0.49.1
-numdifftools==0.9.39
-numpy==1.17.4
-oauth==1.0.1
-oauthlib==3.1.0
-olefile==0.46
+nbformat==5.0.7
+notebook==6.1.3
+numpy==1.19.1
 packaging==20.4
-pandas==1.0.4
+pandas==1.1.1
 pandocfilters==1.4.2
-parsel==1.6.0
-parso==0.5.2
-patsy==0.5.1
-pexpect==4.6.0
+parso==0.7.1
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.0.0
-pkginfo==1.4.2
-pluggy==0.13.0
-progressbar2==3.51.3
 prometheus-client==0.8.0
-prompt-toolkit==2.0.10
-Protego==0.1.16
-protobuf==3.6.1
-psutil==5.5.1
+prompt-toolkit==3.0.7
 ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycups==1.9.73
-PyDispatcher==2.0.5
-pygam==0.8.0
-Pygments==2.3.1
-PyGObject==3.36.0
-PyHamcrest==2.0.2
-pyinotify==0.9.6
-PyJWT==1.7.1
-pymacaroons==0.13.0
-pymc3==3.8
-PyNaCl==1.3.0
-pyOpenSSL==19.1.0
+pycparser==2.20
+Pygments==2.6.1
 pyparsing==2.4.7
-PyQt5==5.14.1
-pyRFC3339==1.1
 pyrsistent==0.16.0
-python-apt==2.0.0
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-pam==1.8.4
-python-utils==2.4.0
-python-xapp==1.8.1
-python-xlib==0.23
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==19.0.1
-qtconsole==4.7.4
+python-dateutil==2.8.1
+pytz==2020.1
+pyzmq==19.0.2
+qtconsole==4.7.7
 QtPy==1.9.0
-queuelib==1.5.0
-readme-renderer==24.0
-regex==2020.6.8
-reportlab==3.5.34
-requests==2.22.0
-requests-toolbelt==0.8.0
-requests-unixsocket==0.2.0
-roman==2.0.0
-scikit-learn==0.23.1
-scipy==1.4.1
-Scrapy==2.1.0
-screen-resolution-extra==0.0.0
-seaborn==0.10.1
-SecretStorage==2.3.1
+requests==2.24.0
+scikit-learn==0.23.2
+scipy==1.5.2
 Send2Trash==1.5.0
-service-identity==18.1.0
-setproctitle==1.1.10
-simplejson==3.16.0
-sip==4.19.21
-six==1.14.0
-ssh-import-id==5.10
-statsmodels==0.11.1
-sympy==1.6
-systemd-python==234
+six==1.15.0
 terminado==0.8.3
 testpath==0.4.4
-Theano==1.0.4
 threadpoolctl==2.1.0
-tinycss==0.4
-torch==1.5.0
-torchvision==0.6.0
 tornado==6.0.4
-tqdm==4.30.0
-traitlets==4.3.3
-twine==3.1.1
-Twisted==20.3.0
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-w3lib==1.22.0
-wadllib==1.3.3
-wcwidth==0.1.8
+tqdm==4.48.2
+traitlets==5.0.3
+urllib3==1.25.10
+wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-xarray==0.15.1
-xkit==0.0.0
-zipp==1.0.0
-zope.interface==5.1.0
