--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,38 @@
-argon2-cffi==20.1.0
-attrs==20.2.0
+appnope==0.1.0
 backcall==0.2.0
-bleach==3.1.5
 certifi==2020.6.20
-cffi==1.14.2
 chardet==3.0.4
 cmapPy==4.0.1
 decorator==4.4.2
-defusedxml==0.6.0
-entrypoints==0.3
 h5py==2.10.0
 idna==2.10
-ipdb==0.13.3
+ipdb==0.13.4
 ipykernel==5.3.4
 ipython==7.18.1
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
 jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.16.0
-jsonschema==3.2.0
-jupyter==1.0.0
+joblib==0.17.0
 jupyter-client==6.1.7
-jupyter-console==6.2.0
 jupyter-core==4.6.3
-MarkupSafe==1.1.1
-mistune==0.8.4
-nbconvert==5.6.1
-nbformat==5.0.7
-notebook==6.1.3
-numpy==1.19.1
-packaging==20.4
-pandas==1.1.1
-pandocfilters==1.4.2
+numpy==1.19.2
+pandas==1.1.3
 parso==0.7.1
-patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.7
+prompt-toolkit==3.0.8
 ptyprocess==0.6.0
-pycparser==2.20
-Pygments==2.6.1
-pyparsing==2.4.7
-pyrsistent==0.16.0
+Pygments==2.7.1
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.2
-qtconsole==4.7.7
-QtPy==1.9.0
 requests==2.24.0
 scikit-learn==0.23.2
-scipy==1.5.2
-Send2Trash==1.5.0
+scipy==1.5.3
 six==1.15.0
-statsmodels==0.12.0
-terminado==0.8.3
-testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.0.4
-tqdm==4.48.2
-traitlets==5.0.3
-urllib3==1.25.10
+tqdm==4.50.2
+traitlets==5.0.5
+umap==0.1.1
+urllib3==1.25.11
 wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
