--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ backcall==0.2.0
 certifi==2020.6.20
 chardet==3.0.4
 cmapPy==4.0.1
+cycler==0.10.0
 decorator==4.4.2
+dill==0.3.2
 h5py==2.10.0
 idna==2.10
 ipdb==0.13.4
@@ -14,25 +16,38 @@ jedi==0.17.2
 joblib==0.17.0
 jupyter-client==6.1.7
 jupyter-core==4.6.3
+kiwisolver==1.2.0
+line-profiler==3.0.2
+llvmlite==0.34.0
+matplotlib==3.3.2
+multiprocess==0.70.10
+numba==0.51.2
 numpy==1.19.2
+p-tqdm==1.3.3
 pandas==1.1.3
 parso==0.7.1
+pathos==0.2.6
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==8.0.0
+pox==0.2.8
+ppft==1.6.6.2
 prompt-toolkit==3.0.8
 ptyprocess==0.6.0
 Pygments==2.7.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.2
 requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.3
+seaborn==0.11.0
 six==1.15.0
 threadpoolctl==2.1.0
 tornado==6.0.4
 tqdm==4.50.2
 traitlets==5.0.5
-umap==0.1.1
+umap-learn==0.4.6
 urllib3==1.25.11
 wcwidth==0.2.5
