--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appnope==0.1.2
 backcall==0.2.0
 cycler==0.10.0
 decorator==4.4.2
@@ -9,8 +10,13 @@ jedi==0.17.2
 joblib==1.0.0
 kiwisolver==1.3.1
 line-profiler==3.1.0
+llvmlite==0.36.0
 matplotlib==3.3.4
+miceforest==2.0.3
+missingpy==0.2.0
 multiprocess==0.70.11.1
+nose==1.3.7
+numba==0.53.1
 numpy==1.20.0
 p-tqdm==1.3.3
 pandas==1.2.1
@@ -24,6 +30,7 @@ ppft==1.6.6.3
 prompt-toolkit==3.0.14
 ptyprocess==0.7.0
 Pygments==2.7.4
+pynndescent==0.5.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
@@ -31,7 +38,10 @@ scikit-learn==0.24.1
 scipy==1.6.0
 seaborn==0.11.1
 six==1.15.0
+sklearn==0.0
+tensorly==0.5.1
 threadpoolctl==2.1.0
 tqdm==4.56.0
 traitlets==5.0.5
+umap-learn==0.5.1
 wcwidth==0.2.5
